Send translated install progress

--- a/translations/en.json
+++ b/translations/en.json
@@ -12,5 +12,14 @@
     "menu": {
         "about": "About",
         "quit": "Quit"
+    },
+    "drupal": {
+        "install": {
+            "init": "Initializing...",
+            "extract": "Extracting archive (% done)"
+        },
+        "error": {
+            "timeout": "The web server did not start after {{timeout}} seconds."
+        }
     }
 }
